<resources>
    <string name="app_name">RentoMojo</string>
    <string name="trending_search">Trending Searches</string>
    <string name="most_popular">Most Popular</string>
    <string name="newly_launched">Newly Launched</string>

    <string name="select_city">Select City</string>

    <string name="view_all">View All</string>

    <string name="back">Back</string>
    <string name="choose_by_room_type">Choose By Room Type</string>
    <string name="chose_by_apartment_type">Choose By Apartment type</string>
    <string name="bedroom">Bedroom</string>
    <string name="living_room">Living Room</string>
    <string name="work_from_home">Work From Home</string>
    <string name="kitchen_dining">Kitchen and Dining</string>
    <string name="smart_home">Smart Home</string>
    <string name="fitness_exercise">Fitness and Exercise</string>
    <string name="studio_apartment">Studio Apartment</string>
    <string name="one_bhk">1 BHK</string>
    <string name="two_bhk">2 BHK</string>
    <string name="browse_by_room_type">Browse by Room type</string>
    <string name="browse_by_product_type">Browse by Product type</string>
    <string name="product">Products</string>
    <string name="choose_your_style">Choose Your Style</string>
    <string name="bedroom_basic">Bedroom Basics</string>
    <string name="Rs">Rs 1208/mo</string>
    <string name="item">1 Items</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="apply">Apply</string>
    <string name="checkout">Checkout</string>
    <string name="verification">Verification</string>
    <string name="delivery">Delivery</string>
    <string name="rent">Rent</string>
    <string name="deposit">Deposit</string>
    <string name="remove">Remove</string>
    <string name="month">24 Months</string>
    <string name="edit">Edit</string>
    <string name="free_delivery">Free Delivery by 08 Feb 2021</string>
    <string name="order_summary">Order Summary</string>
    <string name="payment_details">Payment Details</string>
    <string name="total_monthly_rent">Total monthly Rent</string>
    <string name="shipping">Shipping</string>
    <string name="payable">PAYABLE</string>
    <string name="total_deposit">Total Deposit</string>
    <string name="total_payout">Total Payout</string>
    <string name="place_order">Place Order</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="resend">Resend</string>
    <string name="change">Change</string>
    <string name="just_one_last_step">Just one last step</string>
    <string name="your_name">Your name</string>
    <string name="referral_code">Referral Code</string>
    <string name="email_id">Email ID</string>
    <string name="enter_otp">Please enter OTP or password</string>
    <string name="otp_sent">OTP is sent to 98573413121</string>
    <string name="add_delivery_fragment">Add delivery address</string>
    <string name="house_no">House No./Flat No.*</string>
    <string name="society">Society</string>
    <string name="address">Address</string>
    <string name="done">Done</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="furniture">Furniture</string>
    <string name="packages">Packages</string>
    <string name="appliances">Appliances</string>
    <string name="offers">Offers</string>
    <string name="banglore">Banglore</string>
    <string name="fitness">Fitness</string>
    <string name="wfh">WFH \n Essentials</string>
    <string name="safety_precautions_during">Safety precautions during\nCOVID-19</string>
    <string name="we_re">"We're" taking additional steps and\nprecautionary measures to protect our\ncommunity from COVID-19"</string>
    <string name="know_more">Know More</string>
    <string name="refer_to_your">"Refer to your friend  earn\nupto ₹1000 more"</string>
    <string name="refer_to_your_friend_earn"><![CDATA[Refer to your friend & earn\nupto ₹1000 more]]></string>
    <string name="earn_25_when_your_friend">Earn ₹25 when your friend signs\nup on RentoMojo
        and upto200\nwhen your friend places an order\nsuccessfully</string>
    <string name="refer">Refer now</string>
    <string name="upto_70_off">Upto 70% off</string>
    <string name="electronics">Electronics</string>
    <string name="products_you_might_like_to_rent">Products you might like to rent</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot_password</string>
    <string name="or">or</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="skip_new">Skip ></string>
    <string name="trending_search_xyt">Trending search</string>
    <string name="iguserlogo">iguserlogo</string>
    <string name="hello_guest">Hello Sainath Reddy</string>
    <string name="bengalore">bengalore</string>


    <string name="offers_promotions1">offers_promotions</string>
    <string name="iglogin">igLogin</string>
    <string name="contact_us">contact_us</string>
    <string name="read_more">read_more</string>
    <string name="login_singup">login_singup</string>

    <string name="iglocation">iglocation</string>
    <string name="skip"><![CDATA[Skip >]]></string>
    <string name="skip_new1">Skip</string>
    <string name="trending_search_xyt1">Trending Search</string>
    <string name="most_popular_second">Most Popular</string>
    <string name="offers_promotions"><![CDATA[Offers & Promotions]]></string>
    <string name="explore">Explore</string>
    <string name="wfh10">WFH10</string>
    <string name="get_10_off_every_month_on_a_minimum">"Get 10% OFF every month on a minimum\nmonthly rental of Rs. 300 (maximum discount\nod Rs.200 per month)"</string>
    <string name="Continue">Continue</string>
    <string name="browse_catalogue">Browse Catalogue</string>
    <string name="how_do_you_want_to_contact_our_customer_care">How Do you want to contact our Customer Care?</string>
    <string name="make_a_voice_call">Make a voice call</string>
    <string name="send_a_mail">Send an email</string>
    <string name="upto_70_off2">Upto 70% off</string>
    <string name="save_55">Save 55%</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="how_do_you_want_to_contact_our_cutomer_care">How do you want to contact our cutomer care?</string>
    <string name="send_an_email">Send an Email</string>
    <string name="enetr_the_coupon_code">Enetr the coupon code</string>
    <string name="all_coupons">All coupons</string>
    <string name="your_cart_details">Your Cart Details</string>
    <string name="cart">Cart</string>
    <string name="proceed"><![CDATA[proceed ]]></string>
    <string name="total_refundable_deposit">Total Refundable Deposit</string>
    <string name="enter_the_otp_here">Enter the OTP here</string>
    <string name="order_confirmed">Order Confirmed</string>
</resources>