<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_7"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView style="@style/cardViewInHomeFragmentsOuter">

            <RelativeLayout style="@style/relativeLayoutInHomeFragmentOuter">

                <TextView
                    android:id="@+id/tvSearchCity"
                    style="@style/textViewsInHomeFragments"
                    android:layout_alignParentStart="true"
                    android:drawableStart="@drawable/ic_location_final"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:text="@string/banglore" />

                <TextView
                    android:id="@+id/tvOffers"
                    style="@style/textViewsInHomeFragments"
                    android:layout_alignParentEnd="true"
                    android:drawableStart="@drawable/ic_discount_final"
                    android:text="@string/offers" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFirstHF"
            style="@style/recyclerViewInHomeFragmentOuter" />

        <LinearLayout
            style="@style/linearLayoutInHomeFragments"
            android:layout_marginTop="@dimen/dp_15">

            <androidx.cardview.widget.CardView
                android:id="@+id/clPackagesHF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_packages_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/packages" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clFurnitureHF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_bed_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/furniture" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clAppliancesHF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_washing_machine_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/appliances" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clElectronicsHF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_smartphone_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/electronics" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            style="@style/linearLayoutInHomeFragments"
            android:layout_marginTop="@dimen/dp_1">

            <androidx.cardview.widget.CardView
                android:id="@+id/clFitnessHF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_trademill_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/fitness" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clWfhEssentialsHF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_desktop_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/wfh" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clUptoOffHF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_offer_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/upto_70_off" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></View>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            style="@style/cardViewInHomeFragmentsOuter"
            android:layout_marginTop="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_15">

            <RelativeLayout style="@style/relativeLayoutInHomeFragmentOuter">

                <ImageView
                    android:id="@+id/ivCoronaSafety"
                    style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_covid_19_final" />

                <TextView
                    android:id="@+id/tvSafetyFistLine"
                    style="@style/textViewSecurityLinesInFragments"
                    android:layout_toRightOf="@+id/ivCoronaSafety"
                    android:text="@string/safety_precautions_during"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSafetySecondLine"
                    style="@style/textViewSecurityLinesInFragments"
                    android:layout_below="@+id/tvSafetyFistLine"
                    android:layout_toRightOf="@+id/ivCoronaSafety"
                    android:text="@string/we_re"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tvSafetyKnowMore"
                    style="@style/textViewSecurityLinesInFragments"
                    android:layout_below="@id/tvSafetySecondLine"
                    android:layout_toRightOf="@+id/ivCoronaSafety"
                    android:text="@string/know_more"
                    android:textColor="@color/rentomojo"
                    android:textSize="@dimen/sp_15" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/textViewSecurityLinesInFragments"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toRightOf="@+id/ivCoronaSafety"
            android:fontFamily="sans-serif"
            android:text="@string/products_you_might_like_to_rent"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_17" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSecondHF"
            style="@style/recyclerViewInHomeFragmentOuter" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@color/white"
            android:padding="@dimen/dp_15">

            <ImageView
                android:id="@+id/ivRefer"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_refer_earn" />

            <TextView
                android:id="@+id/tvReferLineFirst"
                style="@style/textViewSecurityLinesInFragments"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/ivRefer"
                android:text="@string/refer_to_your_friend_earn"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvReferLineSecond"
                style="@style/textViewSecurityLinesInFragments"
                android:layout_below="@+id/tvReferLineFirst"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/ivRefer"
                android:text="@string/earn_25_when_your_friend"
                android:textSize="@dimen/sp_12" />

            <Button
                android:id="@+id/btnReferNow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_26"
                android:layout_below="@+id/tvReferLineSecond"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/refer_btn_bg"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_12"
                android:text="@string/refer"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_15" />
    </LinearLayout>

</ScrollView>