<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/dp_20"
    android:layout_marginStart="@dimen/dp_30"
    android:layout_marginEnd="@dimen/dp_30"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_50"
    tools:context=".cart_activity.MobileVerificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/dp_20"
            android:textSize="@dimen/sp_20"
            android:text="@string/add_delivery_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etHouseNo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:padding="@dimen/dp_20"
            android:hint="@string/house_no"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etSociety"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/dp_20"
            android:hint="@string/society"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/etHouseNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:padding="@dimen/dp_20"
            android:hint="@string/address"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/etSociety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnDone"
            android:background="@color/Red"
            android:text="@string/done"
            android:textColor="@color/white"
            android:layout_margin="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>