<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dp_10"
            android:padding="@dimen/dp_25"
            app:cardElevation="@dimen/dp_10">

            <EditText
                android:id="@+id/etSearchSF"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_margin="@dimen/dp_10"
                android:backgroundTint="@color/white"
                android:gravity="center_vertical"
                android:hint="Search for chair, fridge..."
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_10"
                android:textSize="@dimen/sp_20" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="sans-serif-medium"
            android:text="@string/trending_search_xyt"
            android:textColor="@color/Silver"
            android:textSize="@dimen/sp_15" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFirstSF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:fontFamily="sans-serif-medium"
            android:text="@string/most_popular"
            android:textColor="@color/Silver"
            android:textSize="@dimen/sp_15" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSecondSF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="sans-serif-medium"
            android:text="@string/newly_launched"
            android:textColor="@color/Silver"
            android:textSize="@dimen/sp_15" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewThirdSF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15" />

        <LinearLayout
            style="@style/linearLayoutInHomeFragments"
            android:layout_marginTop="@dimen/dp_15">

            <androidx.cardview.widget.CardView
                android:id="@+id/clPackagesSF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_packages_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/packages" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clFurnitureSF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_bed_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/furniture" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clAppliancesSF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_washing_machine_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/appliances" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clElectronicsSF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_smartphone_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/electronics" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            style="@style/linearLayoutInHomeFragments"
            android:layout_marginTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_100">

            <androidx.cardview.widget.CardView
                android:id="@+id/clFitnessSF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_trademill_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/fitness" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clWfhEssentialsSF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_computerdeskfinal" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/wfh" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clUptoOffSF"
                style="@style/cardViewInFragments">

                <LinearLayout style="@style/linearLayoutInsideCardViewInFragments">

                    <ImageView
                        style="@style/imageViewInsideLinearLayoutInSideCardViewInFragments"
                        android:src="@drawable/ic_offer_final" />

                    <TextView
                        style="@style/textViewInsideLinearLayoutInSideCardViewInFragments"
                        android:text="@string/upto_70_off" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></View>

        </LinearLayout>

    </LinearLayout>


</ScrollView>